modif cookie mentions legales

--- a/templates/pages/MentionsLegales.html.twig
+++ b/templates/pages/MentionsLegales.html.twig
@@ -44,9 +44,10 @@
     <p>Conformément au Règlement Général de Protection des Données (Règlement Européen 2016/679 du 27 avril 2016 ; RGPD), nous vous informons des points suivants concernant l’utilisation de vos données personnelles.</p>
     
     <h2>Enregistrement des données personnelles</h2>
-    <p class="TwoColumnsText">Les données personnelles suivantes sont enregistrées lors de l’envoi d’un courrier électronique via la page de contact sont le nom, prénom et adresse électronique.
-    <br>
-    Aucun cookie n’est enregistré lors de la consultation du site, même/sauf en cas d’envoi de courrier électronique. Vous pouvez désactiver l’enregistrement du cookie en cliquant sur le bouton vert "Gestion des services" situé en haut à droite du site, auquel cas il ne sera pas possible de nous contacter via le site.</p>
+    <p class="TwoColumnsText">Le nom, le prénom et l'adresse électroniques sont enregistrées lors de l’envoi d’un courrier électronique via la page de contact.
+    
+    <h2>Cookies</h2>
+    <p class="TwoColumnsText">Ce site utilise un seul cookie, PHPSESSID, qui est indispensable à son fonctionnement. Ce cookie permet d'établir la communication entre le serveur web et le navigateur. Le cookie est temporairement stocké sur votre ordinateur, mobile ou tablette et est supprimé immédiatement à la fin de votre visite. Ce cookie est dispensé du recueil de consentement comme indiqué sur le site de la <a href="https://www.cnil.fr/fr/cookies-et-traceurs-que-dit-la-loi" target="_blank" rel="noopener noreferrer">CNIL.</a></p>
     
     <h2>Utilisation des données personnelles</h2>
     <p class="TwoColumnsText">Nous nous engageons à ne pas divulguer à des tiers les informations que vous nous communiquez. Celles-ci sont confidentielles et ne seront utilisées que pour les besoins du service.
@@ -58,6 +59,7 @@
     
     <h2>Droit d’accès et de rectification</h2>
     <p class="TwoColumnsText">Le site répond à la réglementation relative à l’informatique, aux fichiers et aux libertés telle que définie par la loi n° 78-17 du 6 janvier 1978. Vous disposez, pour ce qui concerne les données personnelles collectées lors de votre visite sur le site d‘un droit d’accès, de modification, de rectification, et de suppression des données conformément à la loi française. Ces droits peuvent être exercés auprès de :
+    <br>
     <br>
     Lymphobank S.A.S.U.
     <br>
