--- a/templates/pages/about.html.twig
+++ b/templates/pages/about.html.twig
@@ -69,7 +69,7 @@
             </div>
         </div>
     </div>
-    <p>Les résultats de notre activité industrielle sont totalement réinvestis dans notre activité de Recherche & Développement, qui a vocation à développer une activité innovante <span class="tooltip">d'immunothérapie <span class="tooltipText"> utilisation de cellules immunitaires comme médicament pour stimuler les défenses de l'organisme contre le cancer</span></span> <span class="tooltip">du cancer.<span class="tooltipText"> utilisation de cellules immunitaires comme médicament pour stimuler les défenses de l'organisme contre le cancer</span></span></p>
+    <p>Les résultats de notre activité industrielle sont totalement réinvestis dans notre activité de Recherche et Développement, qui a vocation à développer une activité innovante <span class="tooltip">d'immunothérapie <span class="tooltipText"> utilisation de cellules immunitaires comme médicament pour stimuler les défenses de l'organisme contre le cancer</span></span> <span class="tooltip">du cancer.<span class="tooltipText"> utilisation de cellules immunitaires comme médicament pour stimuler les défenses de l'organisme contre le cancer</span></span></p>
     <h2>Nos engagements</h2>
     <p class="TwoColumnsText">Soyons clairs : les donneurs et les donneuses donnent leur sang, adulte ou placentaire, pour sauver des vies ou pour faire avancer la recherche. Ils ne donnent pas pour qu’une société privée gagne de l’argent ‘’sur leur dos’’.
     <br><br>
@@ -77,7 +77,7 @@
     <br><br>
     Les bilans comptables de la société sont transmis chaque année à un Comité de Surveillance indépendant qui peut ainsi vérifier le respect par Lymphobank de ses engagements éthiques et financiers.</p>
     <h2>Notre équipe est composée 5 personnes expérimentées : </h2>
-    <img class="photo" src={{ asset ('img/equipe.jpg')}}>
+    <img class="photo" src={{ asset ('img/equipe.JPG')}}>
     <ul class="equipe">
         <li><strong>Marine DANGEVILLE :</strong> Responsable de production</li>
         <li><strong>Mathieu GONCALVES :</strong> Responsable Recherche &développement</li>
@@ -90,15 +90,19 @@
         <div class="card">
             <div class="card-title"><h2>Voici les différents secteurs d’applications dans lesquels vont être utilisés vos dons :</h2></div>
             <div class="contentCard">
-                <ul>
-                    <li>Biotechnologie</li>
-                    <li>Pharmaceutique</li>
-                    <li>Vaccinologie</li>
-                    <li>Immunologie</li>
+                <ul class="TwoColumnsText">
+                    <li>Immunologie et hématologie</li>
+                    <li>Vaccins et maladies infectieuses</li>
                     <li>Oncologie</li>
-                    <li>Infectiologie</li>
-                    <li>Biothérapies</li>
-                    <li>Thérapie cellulaire et génique</li>
+                    <li>Immunothérapies et thérapies cellulaires</li>
+                    <li>Diabète</li>
+                    <li>Hépato-digestif</li>
+                    <li>Cardio-vasculaire</li>
+                    <li>Maladies rares</li>
+                    <li>Dermatologie</li>
+                    <li>Neurosciences</li>
+                    <li>Pneumologie</li>
+                    <li>Pharmacologie</li>
                 </ul>
             </div>
         </div>
