--- a/assets/styles/about.scss
+++ b/assets/styles/about.scss
@@ -65,13 +65,16 @@ $kaki: rgb(180, 139, 10);
         transform: scale(100%);
         transition: transform .2s ease-in-out;
         .contentCard{
+            display: flex;
+            justify-content: center;
             font-size: 1em;
             font-weight: bold;
-            margin: 0 4em;
+            margin: 0 auto;
             height: 100%;
             display: flex;
             align-items: center;
             li{
+                margin-left: 2em;
                 margin-bottom: 1em;
             }
         }
@@ -80,6 +83,7 @@ $kaki: rgb(180, 139, 10);
         transform: scale(102%);
         transition: transform .2s ease-in-out;
     }
+    
 }
 
 .questions{
