--- a/templates/admin/tableauDeBord.html.twig
+++ b/templates/admin/tableauDeBord.html.twig
@@ -13,8 +13,8 @@
             <div class="col-lg-3 col-6">
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title"><i class="fas fa-building"></i>Etablissements</h5>
-                        <p class="card-text">Il y a actuellement {{nbEtablissement}} établissements enregistrés</p>
+                        <h5 class="card-title"><i class="fas fa-building"></i>Maternités</h5>
+                        <p class="card-text">Il y a actuellement {{nbEtablissement}} maternités enregistrées</p>
                         <a href={{ path ('gestion_etablissements')}} class="btn btn-outline-primary">Voir plus</a>
                     </div>
                 </div>
@@ -31,6 +31,17 @@
                 </div>
             </div>
             {# /card témoignage #}
+            {# card actualité #}
+            <div class="col-lg-3 col-6">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title"><i class="far fa-newspaper"></i>Actualités</h5>
+                        <p class="card-text">Il y a actuellement {{nbActu}} actualités enregistrées</p>
+                        <a href={{ path ('gestion_actus')}} class="btn btn-outline-primary">Voir plus</a>
+                    </div>
+                </div>
+            </div>
+            {# /card actualité #}
         </div> 
     </div>
 
