--- a/templates/pages/Faq.html.twig
+++ b/templates/pages/Faq.html.twig
@@ -12,7 +12,7 @@
     {% for faq in faqs %}
         <button class="accordion"><p class="accordionTitle">{{faq.ordre}}. {{faq.question}}</p></button>
         <div class="panel">
-            <p class="TwoColumnsText">{{faq.reponse}}</p>
+            <p class="TwoColumnsText">{{ faq.reponse|nl2br }}</p>
             {% if faq.lien %}
                 <p>Plus d'information : <a href={{faq.lien}} target="_blank" rel="noopener noreferrer">{{faq.NomLien}}</a></p>
             {% endif %}
