--- a/assets/styles/comment.scss
+++ b/assets/styles/comment.scss
@@ -3,7 +3,7 @@ $pastelHover : #52067a;
 $fond :rgb(255, 248, 219);
 $kaki: rgb(180, 139, 10);
 
-#btn2{
+.btn2{
     height: 75px;
 }
 .cardsConditions{
