--- a/templates/pages/Comment.html.twig
+++ b/templates/pages/Comment.html.twig
@@ -15,14 +15,14 @@
     <div class="bulle"><h2>Avant l’accouchement</h2></div>
     <div class="reseau">
         <div id="deroullantMaternité">
-            <button class="accordion"><p class="accordionTitle">1.	Maternités partenaires de notre réseau</p></button>
+            <button class="accordion btn2"><p class="accordionTitle">1.	Maternités partenaires de notre réseau</p></button>
             <div class="panel">
                 <p class="TwoColumnsText">Adressez-vous à l’une des maternités partenaire de notre réseau, vous serez mise en relation avec une sage-femme qui pourra répondre à toutes vos questions et préoccupations, à l’occasion de l’un des rendez-vous de suivi de votre grossesse.</p>  
             </div>
         </div>
         <a href="/Ou" target="_blank" rel="noopener noreferrer"><button id="reseau">Découvrir notre Réseau</button></a>
     </div>
-    <button id="btn2" class="accordion"><p class="accordionTitle">2.	Documents fournis lors du RDV <br> à la maternité</p></button>
+    <button class="accordion btn2"><p class="accordionTitle">2.	Documents fournis lors du RDV <br> à la maternité</p></button>
     <div class="panel">
         <p class="TwoColumnsText">Lors d’un rendez-vous à votre maternité, votre sage-femme vous remettra une <a href="" target="_blank" rel="noopener noreferrer">lettre d’information</a>, ainsi qu’un <a href="" target="_blank" rel="noopener noreferrer">formulaire de consentement</a>, fourni en trois exemplaires et répondra à toutes vos questions.
         </p>
