--- a/templates/pages/thisActu.html.twig
+++ b/templates/pages/thisActu.html.twig
@@ -15,7 +15,7 @@
     {% else %}
         <img class="illustrationLeft" src={{ asset ('img/default-pic.png')}}>
     {% endif %}
-    {{actu.article}}</p></div>
+    {{actu.article|nl2br}}</p></div>
     
 {% endblock %}
 
