--- a/templates/pages/Faq.html.twig
+++ b/templates/pages/Faq.html.twig
@@ -20,5 +20,7 @@
     {% endfor %}
 {% endblock %}
 
-{% block javascripts %}{% endblock %}
+{% block javascripts %}
+    {{ encore_entry_script_tags('js/btnFaq') }}
+{% endblock %}
 
