--- a/templates/pages/MentionsLegales.html.twig
+++ b/templates/pages/MentionsLegales.html.twig
@@ -44,7 +44,7 @@
     <p>Conformément au Règlement Général de Protection des Données (Règlement Européen 2016/679 du 27 avril 2016 ; RGPD), nous vous informons des points suivants concernant l’utilisation de vos données personnelles.</p>
     
     <h2>Enregistrement des données personnelles</h2>
-    <p class="TwoColumnsText">Le nom, le prénom et l'adresse électroniques sont enregistrées lors de l’envoi d’un courrier électronique via la page de contact.
+    <p class="TwoColumnsText">Le nom, le prénom et l'adresse électronique sont enregistrés lors de l’envoi d’un courrier électronique via la page de contact.
     
     <h2>Cookies</h2>
     <p class="TwoColumnsText">Ce site utilise un seul cookie, PHPSESSID, qui est indispensable à son fonctionnement. Ce cookie permet d'établir la communication entre le serveur web et le navigateur. Le cookie est temporairement stocké sur votre ordinateur, mobile ou tablette et est supprimé immédiatement à la fin de votre visite. Ce cookie est dispensé du recueil de consentement comme indiqué sur le site de la <a href="https://www.cnil.fr/fr/cookies-et-traceurs-que-dit-la-loi" target="_blank" rel="noopener noreferrer">CNIL.</a></p>
