--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,7 +9,7 @@
         {{ encore_entry_link_tags('scss/accordeon') }}
         {{ encore_entry_link_tags('scss/card') }}
         {% block stylesheets %}{% endblock %}
-        <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}?v=2" />
+        <link rel="icon" type="image/x-icon" href="{{ asset ('img/favicon.ico') }}?v=2" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;1,300&display=swap" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -29,7 +29,7 @@
                 <a href="" target="_blank" rel="noopener noreferrer">Lettre d’information</a>
                 
             </div>
-            <a href="/" id="logo"><img src={{asset ('img/baby-boy.png')}}></a>
+            <a href="/" id="logo"><img src={{asset ('img/logo.png')}}></a>
             <h1 class="nom headerText">mon-cordon-precieux.fr</h1>
             <h2 class="slogan headerText">Tout savoir sur le don de cordon à usage scientifique !</h2>
             <label id="nav-btn" for="NavToggle">
