--- a/templates/pages/MentionsLegales.html.twig
+++ b/templates/pages/MentionsLegales.html.twig
@@ -9,7 +9,7 @@
 {% block body %}
     <h1>Mentions légales</h1>
 
-    <h1>SITE INTERNET</h1>
+    <h1>Site internet</h1>
 
     <h2>Propriétaire</h2>
     <p>Lymphobank
