formulaire de consentement

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -24,7 +24,7 @@
             <div class="header"></div>
             <nav class="navbar">
             <div class="HeaderTopRight">
-                <a href="" target="_blank" rel="noopener noreferrer">Formulaire de consentement</a>
+                <a href={{ asset ('pdf/Consentement.pdf')}} target="_blank" rel="noopener noreferrer">Formulaire de consentement</a>
                 <br>
                 <a href="" target="_blank" rel="noopener noreferrer">Lettre d’information</a>
                 
