--- a/templates/pages/Pourquoi.html.twig
+++ b/templates/pages/Pourquoi.html.twig
@@ -56,7 +56,7 @@
         <h2>Un acte libre</h2>
         <p class="TwoColumnsText">Vous êtes libre de donner ou non votre sang de cordon.
         <br><br>
-        <span class="underline">Avant la réalisation du recueil</span>, votre consentement au prélèvement vous sera demandé, par signature d’un <a href="" target="_blank" rel="noopener noreferrer">document de consentement</a>.
+        <span class="underline">Avant la réalisation du recueil</span>, votre consentement au prélèvement vous sera demandé, par signature d’un <a href={{ asset ('pdf/Consentement.pdf')}} target="_blank" rel="noopener noreferrer">document de consentement</a>.
         <br><br>
         Vous pouvez retirer à tout moment votre consentement auprès de votre maternité, <span class="underline">sans aucune justification</span> de votre part.
         <br><br>
@@ -83,7 +83,7 @@
         <h2>Un acte volontaire et gratuit </h2>
         <p class="TwoColumnsText">Le don de sang de cordon est volontaire : aucune indemnité ni compensation n’est versée à la maman. Il est également gratuit : aucun frais lié au prélèvement du sang de cordon ou au recueil du cordon ombilical ou du placenta ne sera à la charge de la mère.</p>
         <h2>Un acte éthique</h2>
-        <p class="TwoColumnsText">Conformément à notre <a href={{ asset ('EngagementLymphobank-2018-09-18.pdf')}} target="_blank" rel="noopener noreferrer">Charte d’engagement</a>, les bénéfices liés à la vente de produits issus de votre don seront totalement réinvestis dans le projet de recherche mené par Lymphobank et sans aucun profit personnel tel que versement de dividendes au fondateur, associés, investisseurs ou partenaires financiers de la société Lymphobank. 
+        <p class="TwoColumnsText">Conformément à notre <a href={{ asset ('pdf/EngagementLymphobank-2018-09-18.pdf')}} target="_blank" rel="noopener noreferrer">Charte d’engagement</a>, les bénéfices liés à la vente de produits issus de votre don seront totalement réinvestis dans le projet de recherche mené par Lymphobank et sans aucun profit personnel tel que versement de dividendes au fondateur, associés, investisseurs ou partenaires financiers de la société Lymphobank. 
         <br><br>
         Respectueux de votre don, nous exerçons notre activité en toute transparence et sous le contrôle d’un Comité de Surveillance, constitué pour partie du Directeur de l’EFS-BFC, du Président de la Fédération Française pour le Don de Sang Bénévole, d’un représentant de votre maternité disposant tous d’un accès aux résultats comptables et financiers de la société et pour validation du respect de nos engagements.</p>
         <p>
