--- a/templates/pages/Comment.html.twig
+++ b/templates/pages/Comment.html.twig
@@ -137,5 +137,7 @@
 
 {% endblock %}
 
-{% block javascripts %}{% endblock %}
+{% block javascripts %}
+    {{ encore_entry_script_tags('js/accordeon') }}
+{% endblock %}
 
