--- a/templates/pages/Faq.html.twig
+++ b/templates/pages/Faq.html.twig
@@ -21,6 +21,7 @@
 {% endblock %}
 
 {% block javascripts %}
+    {{ encore_entry_script_tags('js/accordeon') }}
     {{ encore_entry_script_tags('js/btnFaq') }}
 {% endblock %}
 
