--- a/assets/styles/cestQuoi.scss
+++ b/assets/styles/cestQuoi.scss
@@ -9,11 +9,10 @@ $kaki: rgb(180, 139, 10);
     justify-content: space-evenly;
     .card:hover{
         transform: scale(102%);
-        transition: transform .2s ease-in-out;
     }
     .card{
         transform: scale(100%);
-        transition: transform .2s ease-in-out;
+        transition: transform .2s ease-in-out, max-height 0.35s ease-out;
     }
 }
 
