--- a/templates/pages/CestQuoi.html.twig
+++ b/templates/pages/CestQuoi.html.twig
@@ -186,7 +186,31 @@
     </div>
 
     <h2>Schéma interactif :</h2>
-    <div class="cardsHosto" id="schemaDon">
+    <div class="schemaDon">
+        <div class="root">
+            <img class="icon" src={{ asset ('img/icons/pregnant.png')}}>
+        </div>
+        <div class="firstStep">
+            <div class="link"></div>
+            <div class="node">
+                <div class="left">
+                    <div class="link"></div>
+                    <div class="item">
+                        <img class="icon" src={{ asset ('img/icons/blood-transfusion.svg')}}>
+                        <h2>Sang de cordon</h2>     
+                    </div>
+                </div>
+                <div class="right">
+                    <div class="link"></div>
+                    <div class="item">
+                        <img class="icon" src={{ asset ('img/icons/cordonIncline.png')}}>   
+                        <h2>Cordon ombilical</h2>  
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    {# <div class="cardsHosto" id="schemaDon">
         <div class="card">
             <div class="card-pic">
                 <img id="pregnantIcon" class="icon" src={{ asset ('img/icons/pregnant.png')}}>
@@ -227,7 +251,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> #}
     <h1>Quel usage pour ce don ?</h1>
     <p>Les cellules du cordon sont précieuses pour la recherche. Elles sont utilisées :
     <ul class="listeUsage">
