--- a/templates/pages/CestQuoi.html.twig
+++ b/templates/pages/CestQuoi.html.twig
@@ -194,6 +194,7 @@
             <div class="link"></div>
             <div class="node">
                 <div class="left">
+                    <div class="horizontalLink"></div>
                     <div class="link"></div>
                     <div class="item">
                         <img class="icon" src={{ asset ('img/icons/blood-transfusion.svg')}}>
@@ -201,6 +202,7 @@
                     </div>
                 </div>
                 <div class="right">
+                    <div class="horizontalLink"></div>
                     <div class="link"></div>
                     <div class="item">
                         <img class="icon" src={{ asset ('img/icons/cordonIncline.png')}}>   
