schema don firststep

--- a/templates/pages/CestQuoi.html.twig
+++ b/templates/pages/CestQuoi.html.twig
@@ -294,5 +294,6 @@
 {% block javascripts %}
     {{ encore_entry_script_tags('js/accordeon') }}
     {{ encore_entry_script_tags('js/btnCard') }}
+    {{ encore_entry_script_tags('js/schemaDon') }}
 {% endblock %}
 
