--- a/templates/pages/CestQuoi.html.twig
+++ b/templates/pages/CestQuoi.html.twig
@@ -211,6 +211,20 @@
                 </div>
             </div>
         </div>
+        <div class="sangNode">
+            <div class="center">
+                <div class="link"></div>
+                <div class="horizontalLink"></div>
+            </div>
+            <div class="delta">
+                <div class="link"></div>
+                <div class="horizontal">
+                    <div class="horizontalLink"></div>
+                    <div class="horizontalLink"></div>
+                    <div class="horizontalLink"></div>
+                </div>
+            </div>
+        </div>
     </div>
     {# <div class="cardsHosto" id="schemaDon">
         <div class="card">
