--- a/assets/styles/cestQuoi.scss
+++ b/assets/styles/cestQuoi.scss
@@ -170,7 +170,16 @@ $horizontalLinkLength: 210px;
         background-color: $pastelHover;
         height: 90px;
         width: 18px;
-        margin: -10px auto;
+        margin: 0 auto;
+        position: relative;
+    }
+
+    .horizontalLink{
+        height: 18px;
+        width: $horizontalLinkLength;
+        background-color: $pastel;
+        margin: 0;
+        position: relative;
     }
 
     .item{
@@ -196,18 +205,10 @@ $horizontalLinkLength: 210px;
         margin: auto;
         display: flex;
         justify-content: center;
-        .horizontalLink{
-            height: 18px;
-            width: $horizontalLinkLength;
-            background-color: $pastel;
-            margin: 0;
-            position: relative;
-        }
         .left, .right{
             margin: 0;
             width: 50%;
             .link{
-                position: relative;
                 background-color: $pastel;
                 margin: 0;
             }
@@ -236,6 +237,29 @@ $horizontalLinkLength: 210px;
             }
             .item{
                 left: calc(#{$horizontalLinkLength}/2);
+            }
+        }
+    }
+
+    .delta{
+        .link{
+            margin-top: -18px;
+            background-color: $pastel;
+        }
+        .horizontal{
+            display: flex;
+            justify-content: center;
+        }
+       
+    }
+    .sangNode{
+        .center{
+            .link{
+                background-color: $pastel;
+                right: calc(#{$horizontalLinkLength} - 18px/2);
+            }
+            .horizontalLink{
+                left: calc(50% - #{$horizontalLinkLength});
             }
         }
     }
