--- a/templates/pages/CestQuoi.html.twig
+++ b/templates/pages/CestQuoi.html.twig
@@ -224,6 +224,26 @@
                     <div class="horizontalLink"></div>
                 </div>
             </div>
+            <div class="triple">
+                <div class="link"></div>
+                <div class="link"></div>
+                <div class="link"></div>
+            </div>
+            <div class="triple">
+                <div class="item itemLeft">
+                    <img class="icon" src={{ asset ('img/icons/cellule-sanguine.svg')}}>
+                    <h2>Sang de cordon</h2>
+                </div>
+                <div class="item">
+                    <img class="icon" src={{ asset ('img/icons/serum.svg')}}>
+                    <h2>Sang de cordon</h2>
+                </div>
+                <div class="item itemRight">
+                    <img class="icon" src={{ asset ('img/icons/blood-transfusion.svg')}}>
+                    <h2>Sang de cordon</h2>
+                </div>
+            </div>
+            
         </div>
     </div>
     {# <div class="cardsHosto" id="schemaDon">
