schema don debut js sangcordon

--- a/templates/pages/CestQuoi.html.twig
+++ b/templates/pages/CestQuoi.html.twig
@@ -197,7 +197,7 @@
                     <div class="horizontalLink"></div>
                     <div class="link"></div>
                     <div class="item">
-                        <img class="icon" src={{ asset ('img/icons/blood-transfusion.svg')}}>
+                        <img class="icon sangCordonBtn" src={{ asset ('img/icons/blood-transfusion.svg')}}>
                         <h2>Sang de cordon</h2>     
                     </div>
                 </div>
