--- a/templates/pages/CestQuoi.html.twig
+++ b/templates/pages/CestQuoi.html.twig
@@ -243,7 +243,19 @@
                     <h2>Sang de cordon</h2>
                 </div>
             </div>
-            
+        </div>
+        <div class="cordonNode">
+            <div class="center">
+                <div class="link"></div>
+                <div class="horizontalLink"></div>
+            </div>
+            <div class="delta">
+                <div class="link"></div>
+                <div class="horizontal">
+                    <div class="horizontalLink"></div>
+                    <div class="horizontalLink"></div>
+                </div>
+            </div>
         </div>
     </div>
     {# <div class="cardsHosto" id="schemaDon">
