--- a/templates/pages/CestQuoi.html.twig
+++ b/templates/pages/CestQuoi.html.twig
@@ -205,7 +205,7 @@
                     <div class="horizontalLink"></div>
                     <div class="link"></div>
                     <div class="item">
-                        <img class="icon" src={{ asset ('img/icons/cordonIncline.png')}}>   
+                        <img class="icon cordonBtn" src={{ asset ('img/icons/cordonIncline.png')}}>   
                         <h2>Cordon ombilical</h2>  
                     </div>
                 </div>
@@ -232,15 +232,15 @@
             <div class="triple">
                 <div class="item itemLeft">
                     <img class="icon" src={{ asset ('img/icons/cellule-sanguine.svg')}}>
-                    <h2>Sang de cordon</h2>
+                    <h2>Cellules souches hématopoïétiques</h2>
                 </div>
                 <div class="item">
                     <img class="icon" src={{ asset ('img/icons/serum.svg')}}>
-                    <h2>Sang de cordon</h2>
+                    <h2>Cellules immunitaires</h2>
                 </div>
                 <div class="item itemRight">
                     <img class="icon" src={{ asset ('img/icons/blood-transfusion.svg')}}>
-                    <h2>Sang de cordon</h2>
+                    <h2>Sérum/Plasma</h2>
                 </div>
             </div>
         </div>
@@ -256,50 +256,22 @@
                     <div class="horizontalLink"></div>
                 </div>
             </div>
-        </div>
-    </div>
-    {# <div class="cardsHosto" id="schemaDon">
-        <div class="card">
-            <div class="card-pic">
-                <img id="pregnantIcon" class="icon" src={{ asset ('img/icons/pregnant.png')}}>
+            <div class="double">
+                <div class="link"></div>
+                <div class="link"></div>
             </div>
-            <button class="btnCard"><p>En savoir plus</p></button>
-            <div class="panelCard">
-                <div class="schemaCard">
-                    <div class="schemaDonSteep1">
-                        <div class="doubleFleche">
-                            <i class="fas fa-long-arrow-alt-right fa-4x flecheGauche"></i>
-                            <i class="fas fa-long-arrow-alt-right fa-4x flecheDroite"></i>
-                        </div>
-                        <div class="sangCordon">
-                            <div class="sangSteep1">
-                                <h2>Sang de cordon</h2>
-                                <img id="pocheIcon" class="icon" src={{ asset ('img/icons/blood-transfusion.svg')}}>
-                                <div class="tripleFleche">
-                                    <i class="fas fa-long-arrow-alt-right fa-4x flecheGauche"></i>
-                                    <i class="fas fa-long-arrow-alt-right fa-4x"></i>
-                                    <i class="fas fa-long-arrow-alt-right fa-4x flecheDroite"></i>
-                                </div>
-                                <div class="sangSteep2">
-                                    <h2>Sang de cordon</h2>
-                                    <img class="icon" src={{ asset ('img/icons/cellule-sanguine.svg')}}>
-                                    <img class="icon" src={{ asset ('img/icons/serum.svg')}}>
-                                </div>
-                            </div>
-                            <div class="cordonSteep1">
-                                <h2>Cordon ombilical</h2>
-                                <img id="cordonIcon" class="icon" src={{ asset ('img/icons/cordonIncline.png')}}>
-                                <div class="doubleFleche">
-                                    <i class="fas fa-long-arrow-alt-right fa-4x flecheGauche"></i>
-                                    <i class="fas fa-long-arrow-alt-right fa-4x flecheDroite"></i>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+            <div class="double">
+                <div class="item itemLeft">
+                    <img class="icon" src={{ asset ('img/icons/cellule-sanguine.svg')}}>
+                    <h2>Cellules souches mésenchymateuses</h2>
+                </div>
+                <div class="item itemRight">
+                    <img class="icon" src={{ asset ('img/icons/blood-cells.svg')}}>
+                    <h2>Cellules endothéliales</h2>
                 </div>
             </div>
         </div>
-    </div> #}
+    </div>
     <h1>Quel usage pour ce don ?</h1>
     <p>Les cellules du cordon sont précieuses pour la recherche. Elles sont utilisées :
     <ul class="listeUsage">
