--- a/templates/pages/CestQuoi.html.twig
+++ b/templates/pages/CestQuoi.html.twig
@@ -191,7 +191,7 @@
             <img class="icon" src={{ asset ('img/icons/pregnant.png')}}>
         </div>
         <div class="firstStep">
-            <div class="link"></div>
+            <div class="link firstLink"></div>
             <div class="node">
                 <div class="left">
                     <div class="horizontalLink"></div>
