--- a/assets/styles/cestQuoi.scss
+++ b/assets/styles/cestQuoi.scss
@@ -197,10 +197,19 @@ $horizontalLinkLength: 210px;
         }
     }
     
+    .activeLink{
+        background-color: $pastelHover !important;
+    }
+
     .firstStep{
         max-height: 0;
         transition: max-height 0.35s ease-out;
         overflow: hidden;
+        .firstLink{
+            position: relative;
+            top: 18px;
+            z-index: 1;
+        }
     }
     .node{
         margin: auto;
