suite schema don

--- a/templates/pages/CestQuoi.html.twig
+++ b/templates/pages/CestQuoi.html.twig
@@ -216,7 +216,7 @@
                 <div class="link"></div>
                 <div class="horizontalLink"></div>
             </div>
-            <div class="delta">
+            <div class="delta deltaSang">
                 <div class="link"></div>
                 <div class="horizontal">
                     <div class="horizontalLink"></div>
@@ -224,12 +224,12 @@
                     <div class="horizontalLink"></div>
                 </div>
             </div>
-            <div class="triple">
+            <div class="triple tripleLink">
                 <div class="link"></div>
                 <div class="link"></div>
                 <div class="link"></div>
             </div>
-            <div class="triple">
+            <div class="triple tripleItem">
                 <div class="item itemLeft">
                     <img class="icon" src={{ asset ('img/icons/cellule-sanguine.svg')}}>
                     <h2>Cellules souches hématopoïétiques</h2>
